<resources>
    <string name="app_name">WhatsClone</string>

    <string name="txt_pesquisar">Pesquisar</string>
    <string name="txt_novo_grupo">Novo grupo</string>
    <string name="txt_nova_transmissao">Nova transmissão</string>
    <string name="txt_whatsweb">Whatsapp Web</string>
    <string name="txt_mensagens_favoritas">Mensagens favoritas</string>
    <string name="txt_configuracoes">Configurações</string>
    <string name="txt_desconectar">Desconectar</string>


    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="senha">Senha</string>
    <string name="email_telefone">Email</string>
    <string name="login">Login</string>
    <string name="usando_email">Usando Email</string>
    <string name="usando_telefone">Usando Telefone</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="nome">Nome</string>
    <string name="seu_nome">Seu Nome</string>
    <string name="email">Email</string>
    <string name="insira_seu_telefone">Insira seu telefone</string>
    <string name="prosseguir">Prosseguir</string>
    <string name="verificar">Verificar Codigo</string>
    <string name="aviso_cobranca">Enviaremos um SMS para seu telefone. Este procedimento pode gerar custos por parte de sua operadora. Após clicar no botão, o navegador abrirá.</string>
    <string name="codigo_verificacao">Insira o código enviado por SMS</string>
    <string name="enviar_codigo">Enviar Código</string>
    <string name="aviso_nome">Esse não é seu nome de usuário nem seu PIN. Esse nome será visível para seus contatos do WhatsClone.</string>
    <string name="finalizar_cadastro">Finalizar Cadastro!</string>
    <string name="carregando">Carregando...</string>
    <string name="recado">Recado</string>
    <string name="telefone">Telefone</string>
    <string name="remover_foto">Remover Foto</string>
    <string name="galeria">Galeria</string>
    <string name="camera">Câmera</string>
    <string name="recado_padrao">Olá! Eu estou usando o WhatsClone.</string>
    <string name="reenviar_codigo">Reenviar Código</string>
    <string name="conversas">CONVERSAS</string>
    <string name="status">STATUS</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="digite_uma_mensagem">Digite uma mensagem</string>
    <string name="visto_por_ultimo">Visto por último</string>
    <string name="recado_e_numero">Recado e número de telefone</string>
    <string name="bloquear">Bloquear</string>
    <string name="hora_padrao">00:00</string>
    <string name="adicione_legenda">Adicione uma legenda...</string>
    <string name="digite_nome_grupo">Digite o nome do grupo aqui</string>
    <string name="participantes">Participantes</string>
    <string name="sair_do_grupo">Sair do Grupo</string>
</resources>
