<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D5D5D5"
    tools:context=".activity.DetalhesContatoActivity">

    <ImageView
        android:id="@+id/fotoDetalheContato"
        android:layout_width="0dp"
        android:layout_height="400dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/padrao_usuario" />

    <TextView
        android:id="@+id/statusDetalheContato"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="TextView"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@+id/fotoDetalheContato"
        app:layout_constraintEnd_toEndOf="@+id/fotoDetalheContato"
        app:layout_constraintStart_toStartOf="@+id/fotoDetalheContato" />

    <TextView
        android:id="@+id/nomeDetalheContato"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/nome"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/statusDetalheContato"
        app:layout_constraintEnd_toEndOf="@+id/fotoDetalheContato"
        app:layout_constraintStart_toStartOf="@+id/fotoDetalheContato" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@android:color/white"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fotoDetalheContato">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/recado_e_numero"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/recadoDetalheContato"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="@dimen/browser_actions_context_menu_min_padding"
            android:text="@string/recado"
            android:textSize="18sp" />

        <include
            layout="@layout/divisor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp" />

        <TextView
            android:id="@+id/telefoneDetalheContato"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/telefone"
            android:textSize="18sp" />

    </LinearLayout>

    <Button
        android:id="@+id/bloquearDetalheContato"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@android:color/white"
        android:drawableStart="@drawable/ic_block"
        android:drawablePadding="16dp"
        android:gravity="start|center_vertical"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:text="@string/bloquear"
        android:textColor="@android:color/holo_red_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>