<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/dialogRemover"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/remover"
        android:src="@drawable/ic_delete"
        app:layout_constraintEnd_toStartOf="@+id/dialogGaleria"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/dialogGaleria"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/galeria"
        app:layout_constraintEnd_toStartOf="@+id/dialogCamera"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/dialogRemover"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/dialogCamera"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/camera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/dialogGaleria"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/remover_foto"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/dialogRemover"
        app:layout_constraintStart_toStartOf="@+id/dialogRemover"
        app:layout_constraintTop_toBottomOf="@+id/dialogRemover" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/galeria"
        app:layout_constraintEnd_toEndOf="@+id/dialogGaleria"
        app:layout_constraintStart_toStartOf="@+id/dialogGaleria"
        app:layout_constraintTop_toBottomOf="@+id/dialogGaleria" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/camera"
        app:layout_constraintEnd_toEndOf="@+id/dialogCamera"
        app:layout_constraintStart_toStartOf="@+id/dialogCamera"
        app:layout_constraintTop_toBottomOf="@+id/dialogCamera" />
</androidx.constraintlayout.widget.ConstraintLayout>